<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent"
    tools:context="org.example.pacman.MainActivity" >

    <LinearLayout
        android:background="@color/whiteTint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_weight="1"
            android:id="@+id/points"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/points" />
        <TextView
            android:layout_weight="1"
            android:id="@+id/level"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/level" />
        <TextView
            android:layout_weight="1"
            android:id="@+id/timer"
            android:textSize="24sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time" />
    </LinearLayout>

    <!-- Notice how the custom view is referenced here with
    a full package path-->
    <org.example.pacman.GameView
        android:layout_weight="1"
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </org.example.pacman.GameView>

    <LinearLayout
        android:orientation="horizontal"
        android:background="@color/whiteTint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_left"
            android:id="@+id/moveLeft"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_weight="2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/move_up"
                android:id="@+id/moveUp"/>
            <Button
                android:layout_weight="1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/move_down"
                android:id="@+id/moveDown"/>
        </LinearLayout>
        <Button
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_right"
            android:id="@+id/moveRight"/>
    </LinearLayout>

</LinearLayout>
